--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,7 +2,7 @@ ARG FRAPPE_BRANCH=develop
 FROM node:14-buster
 ARG FRAPPE_BRANCH=develop
 
-ARG GITHUB_OWNER=default_github_owner # you could give a default value as well
+ARG GITHUB_OWNER=msf4-0 			# you could give a default value as well
 ENV GITHUB_OWNER=$GITHUB_OWNER
 
 COPY install_frappe.sh /install_frappe
@@ -18,8 +18,9 @@ RUN /install_frappe ${FRAPPE_BRANCH} && \
   # /install_app <app_name> <repo> <app_branch>
   /install_app metabase_integration https://github.com/${GITHUB_OWNER}/ERPNext-Metabase-Integration master && \
   /install_app erpnext_telegram_integration https://github.com/${GITHUB_OWNER}/ERPNext-Telegram-Integration master && \
-  /install_app frepple https://github.com/${GITHUB_OWNER}/ERPNext-Frepple-Integration master && \
+  /install_app frepple https://github.com/${GITHUB_OWNER}/ERPNext-Frepple-Enhanced-Integration main && \
   /install_app barcode_shrdc https://github.com/${GITHUB_OWNER}/ERPNext-Barcode-Integration master && \
+  /install_app autocount https://github.com/${GITHUB_OWNER}/ERPNext-Autocount-Integration master && \
   /prepare_production
 
 FROM frappe/erpnext-nginx:${FRAPPE_BRANCH}
@@ -28,7 +29,7 @@ COPY --from=0 /home/frappe/frappe-bench/sites/ /var/www/html/
 COPY --from=0 /rsync /rsync
 
 # Append list of installed to apps.txt
-RUN echo -n "metabase_integration\nerpnext_telegram_integration\nbarcode_shrdc\nfrepple" >> /var/www/html/apps.txt
+RUN echo -n "metabase_integration\nerpnext_telegram_integration\nbarcode_shrdc\nfrepple\nautocount" >> /var/www/html/apps.txt
 
 VOLUME [ "/assets" ]
 
